Fixed issue where the font spills over onto a new line when on moblie

--- a/assets/css/mcrgreyhats.css
+++ b/assets/css/mcrgreyhats.css
@@ -143,7 +143,7 @@ ul.social li a.fa-slack {
 @media screen and (max-width: 1200px)  {
 	body, input, textarea, select {
 	    line-height: 1.75em;
-	    font-size: 14pt;
+	    font-size: 14px;
 	    letter-spacing: 0;
 	}
 
